--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Timer</title>
+    <link rel="stylesheet" href="./css/1-timer.css" />
+</head>
+<a href="./index.html">Go to home</a>
+<h1>Welcome to Timer</h1>
 <input type="text" id="datetime-picker" />
 <button type="button" data-start>Start</button>
 
@@ -18,4 +30,6 @@
         <span class="value" data-seconds>00</span>
         <span class="label">Seconds</span>
     </div>
+        <script src="./js/1-timer.js" type="module"></script>
+
 </div>
